# melody-vault-v2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docker/: Dockerfile.api  docker-compose.yml  docker_compose.yml
frontend/: analyzer.html
notebooks/: 01_audio_basics.ipynb
scripts/: dev.sh  run_demucs.sh
services/analysis/: analyze_bass.py  analyze_drums.py  analyze_other.py  analyze_vocals.py  inspect_stem.py  run_analysis.py  schemas.py
services/analysis/tests/: test_schemas.py
services/api/: main.py
services/worker/: celery_app.py  tasks.py
