[tool.poetry]
name = "melody-vault-v2"
version = "0.1.0"
description = ""
authors = ["Bhavarth <abcbhavarth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
librosa = "^0.11.0"
soundfile = "^0.13.1"
numpy = "^2.4.4"
matplotlib = "^3.10.8"
jupyter = "^1.1.1"
ipykernel = "^7.2.0"
pydantic = "^2.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
